# news-aggregator-mcp-server

./: README.md  pyproject.toml  smithery.yaml
src/: server.py
src/tools/: gdelt.py  hackernews.py  rss.py
