[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-aggregator-mcp-server"
version = "0.1.0"
description = "MCP-Server für Nachrichten-Aggregation — RSS/Atom-Feeds, HackerNews, GDELT News Intelligence für AI-Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AiAgentKarl" }]
keywords = ["mcp", "news", "rss", "atom", "hackernews", "gdelt", "ai-agent", "aggregator", "feeds", "journalism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/news-aggregator-mcp-server"
Repository = "https://github.com/AiAgentKarl/news-aggregator-mcp-server"
Issues = "https://github.com/AiAgentKarl/news-aggregator-mcp-server/issues"

[project.scripts]
news-aggregator-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
